# api-sec-natter

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/controller/: message.rs  mod.rs  space.rs  user.rs
src/error/: mod.rs
src/errors/: mod.rs
src/model/: message.rs  mod.rs  space.rs  user.rs
src/store/: mod.rs
src/store/migrations/: 20230324041528_spaces.sql  20230324041539_messages.sql  20230411043429_users.sql  20230715052346_audit_logs.sql
src/types/: message.rs  mod.rs  space.rs
