[package]
name = "api-sec-natter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

tokio = { version = "1.24.2", features = ["full"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }

sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "migrate", "postgres"]}
chrono = { version = "0.4.23", features = ["serde"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

regex = "1"
