[package]
name = "api-sec-natter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
base64 = "0.21"

tokio = { version = "1.24.2", features = ["full"] }
axum = "0.6.16"
tower = { version = "0.4.13", features = ["full"] }
tower-limit = "0.3.1"
tower-http = { version = "0.4.0", features = ["compression-gzip", "timeout"] }
hyper = { version = "0.14", features = ["full"] }


sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "migrate", "postgres", "chrono"]}
chrono = { version = "0.4.23", features = ["serde"] }

tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

rand = "0.8.5"
rust-argon2 = "1.0.0"

regex = "1"
